automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -126,7 +126,7 @@
    },
    "outputs": [],
    "source": [
-    "This is a python cell without valid Python so we will see an error"
+    "This is a python cell without valid Python so we will see an error\n"
    ]
   },
   {
@@ -180,7 +180,7 @@
    },
    "outputs": [],
    "source": [
-    "name = 'bob'"
+    "name = 'bob'\n"
    ]
   },
   {
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "14"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
    },
    "outputs": [],
    "source": [
-    "hometown = 'NYC'"
+    "hometown = \"NYC\"\n"
    ]
   },
   {
@@ -268,21 +268,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'NYC'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'hometown' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-d0550863d330>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mhometown\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mhometown\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'hometown' is not defined"
+     ]
     }
    ],
    "source": [
+    "hometown\n",
     "hometown"
    ]
   },
@@ -296,11 +298,10 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "None\n",
     "None"
    ]
   },
